--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,289 @@
-.App {
-  text-align: center;
+*{
+  min-width: 0;
+  min-height: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  background-color: #ffffff;
+  background-image: url("https://www.transparenttextures.com/patterns/diagmonds-light.png");
+  /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
+
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.to-do-app{
+  height: 100vh;
+  width: 100vw;
   display: flex;
   flex-direction: column;
+}
+
+/* Navigation - Bar */
+.nav-bar{
+  height: 60px;
+  background-color: rgba(0, 0, 0, 0.76);
+  box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.6);
+  padding: 10px 20px;
+  font-family: "B612 Mono", monospace;
+}
+
+/* Inside Navigation Bar */
+.nav-contents{
+  display: flex;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  height: 100%;
+  gap: 15px;
+  font-size: 16pt;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.menu-btn{
+  font-size: 16pt;
+  padding: 5px 10px;
+  border-radius: .2em;
+  border: none;
+  outline: none;
+  box-shadow: 0px 0px 0px 2px transparent;
+  background-color: transparent;
+  color: white;
+  transition: box-shadow .2s ease-in-out;
+  cursor: pointer;
+  &:hover{
+    box-shadow: 0px 0px 0px 2px white;
+  }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.title{
+  cursor: default;
+}
+
+/* Main Contents */
+.main-content{
+  display: flex;
+  flex-direction: row;
+  height: 100%;
+}
+
+/* Inside Main Contents */
+/* Side Panel */
+.side-panel{
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.76);
+  flex: 0 0 10%;
+  transition: all .2s ease-in-out;
+}
+
+/* Hide Side Panel */
+.hide-panel{
+  display: none;
+  transition: all .2s ease-in-out;
+}
+
+.side-panel-contents{
+  display: flex;
+  flex-direction: column;
+  padding-top: 5px;
+}
+
+.a-content{
+  text-decoration: none;
+  color: white;
+  font-size: 12pt;
+  font-family: "B612 Mono", monospace;
+  padding: 10px 0px;
+  padding-left: 20px;
+  transition: background-color .2s ease-in-out;
+  &:hover{
+    background-color: rgba(0, 0, 0, 0.212);
   }
 }
+
+/* Home-panel */
+.home{
+  flex: 1 1 auto;
+}
+
+/* Inside Home-Panel */
+
+/* function panel */
+.function-bar{
+  height: 40px;
+  display: flex;
+  flex-direction: row;
+  padding: 10px;
+  box-shadow: 0px 1px 2px 1px rgba(0, 0, 0, 0.158);
+  gap: 5px;
+  background-color: rgba(255, 255, 255, 0.4);
+}
+
+/* Inside Function Panel */
+.add-btn{
+  font-size: 12pt;
+  padding:  0px 30px;
+  border-radius: .3em;
+  outline: none;
+  border: none;
+  box-shadow: 0px 0px 0px 2px rgba(0, 0, 0, 0.72);
+  background-color: transparent;
+  color: rgba(0, 0, 0, 0.72);
+  transition: all .2s ease-in-out;
+  cursor: pointer;
+  &:hover{
+    color: white;
+    background-color: rgba(0, 0, 0, 0.72);
+    box-shadow: 0px 0px 0px 2px transparent;
+  }
+}
+
+/* Cards and Form */
+.cards-form{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-auto-flow: row;
+  gap: 50px;
+  padding: 20px; 
+  overflow-y: scroll;
+  height: 90%;
+  scrollbar-width: none;
+}
+
+/* A Particular Card */
+.card{
+  width: 400px;
+  height: 325px;
+  border-radius: 1em;
+  background-color: rgba(255, 255, 255, 0.4);
+  box-shadow: 0px 0px 3px 1px rgba(0, 0, 0, 0.096);
+  transition: all .2s ease-in-out;
+  cursor: default;
+  &:hover{
+    background-color: rgba(255, 255, 255, 0.6);
+  }
+}
+
+/* Form Container */
+.form-container{
+  display: flex;
+  flex-direction: column;
+  height: 325px;
+  width: 400px;
+  grid-area: 1 / 1 / 2 / 2;
+  padding: 10px;
+  border-radius: 1em;
+  background-color: rgba(255, 255, 255, 0.4);
+  box-shadow: 0px 0px 3px 1px rgba(0, 0, 0, 0.096);
+  transition: all .2s ease-in-out;
+  cursor: pointer;
+  &:hover{
+    background-color: rgba(255, 255, 255, 0.6);
+  }
+}
+
+/* Form Header */
+.form-header{
+  display: flex;
+  flex-direction: row-reverse;
+  padding: 0px 0px 8px 0px;
+}
+
+/* Form Close Button */
+.close-btn{
+  border-radius: 1em;
+  padding: 3px 5px;
+  outline: none;
+  border: none;
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.72);
+  font-size: 8pt;
+  color: rgba(0, 0, 0, 0.72);
+  font-weight: 700;
+  transition: all .2s ease-in-out;
+  cursor: pointer;
+  &:hover{
+    background-color: rgba(0, 0, 0, 0.72);
+    color: white;
+    box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.72);
+  }
+}
+
+/* Form */
+.form{
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  height: 100%;
+  width: 100%;
+}
+
+/* Form Inputs */
+.input{
+  font-size: 14pt;
+  outline: none;
+  border: none;
+  padding: 10px 5px;
+  background-color: rgba(255, 255, 255, 0.747);
+  border-radius: .1em;
+  &::placeholder{
+    color: rgba(0, 0, 0, 0.37);
+  }
+}
+
+/* Form Submit */
+.submit-btn{
+  padding: 10px;
+  font-size: 14pt;
+  border: none;
+  outline: none;
+  background-color: transparent;
+  box-shadow: 0px 0px 1px 2px rgba(0, 0, 0, 0.72);
+  border-radius: .3em;
+  cursor: pointer;
+  transition: all .2s ease-in-out;
+  color: rgba(0, 0, 0, 0.72);
+  &:hover{
+    background-color: rgba(0, 0, 0, 0.72);
+    color: white;
+    box-shadow: 0px 0px 1px 2px transparent;
+  }
+}
+
+/* Data in Cards */
+.data-card{
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+}
+
+.title-date{
+  display: flex;
+  justify-content: space-between;
+  font-weight: 500;
+  font-size: 14pt;
+  text-transform: capitalize;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.096);
+}
+
+.description{
+  font-size: 12pt;
+  text-align: justify;
+  flex-grow: 2;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.096);
+}
+
+.categories{
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  font-size: 12pt;
+}
+
+.date{
+  color: rgba(0, 0, 0, 0.37);
+}
+
+/* To Remove a scroll from the browser */
+/* ::-webkit-scrollbar {
+  display: none;
+} */
