--- a/src/App.css
+++ b/src/App.css
@@ -139,20 +139,22 @@ body{
 
 /* Cards and Form */
 .cards-form{
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-  grid-auto-flow: row;
-  gap: 50px;
+  display: flex;
+  /* grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-auto-flow: row; */
+  flex-wrap: wrap;
+  gap: 20px;
   padding: 20px; 
   overflow-y: scroll;
-  height: 90%;
   scrollbar-width: none;
 }
 
 /* A Particular Card */
 .card{
-  width: 400px;
-  height: 325px;
+  max-width: 300px;
+  min-width: 300px;
+  min-height: 200px;
+  max-height: 200px;
   border-radius: 1em;
   background-color: rgba(255, 255, 255, 0.4);
   box-shadow: 0px 0px 3px 1px rgba(0, 0, 0, 0.096);
@@ -160,6 +162,7 @@ body{
   cursor: default;
   &:hover{
     background-color: rgba(255, 255, 255, 0.6);
+    transform: scale(1.05);
   }
 }
 
